<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sitexa</string>
    <string name="url">http://www.sitexa.org/</string>

    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="ok">OK</string>


    <string name="activity_title_user_list">Users List</string>
    <string name="activity_title_user_details">User Details</string>
    <string name="activity_title_user_login">User Login</string>

    <string name="find_password">Find Password</string>
    <string name="register_user">Register User</string>
    <string name="login_text">Login</string>
    <string name="username_enter_hint">username</string>
    <string name="password_enter_hint">password</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_password_again">Please enter password again</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="setting_login_password_hint">password</string>
    <string name="setting_login_password_again_hint">password again</string>
    <string name="getVerifyCode">Get Verify Code</string>
    <string name="resendSecond">%d</string>
    <string name="reGetVerifyCode">Get Verify Code Again</string>
    <string name="sendVerifyCode">Send Verify Code</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="enter_verify_code">Enter Verify Code</string>
    <string name="mobile_no">Mobile No</string>
    <string name="verify_code">Verify Code</string>
    <string name="set_password">Set Password</string>
    <string name="read_and_agree">Read and agree with</string>
    <string name="service_statement">service statement</string>

    <string name="message_sending">正在发送中...</string>
    <string name="uploading_sending_progress">上传进度:%1$d%%</string>
    <string name="message_sent_successfully">发送成功!</string>
    <string name="message_sent_failed">发送失败!</string>



    ////////////////////////////////////////////////////////////
    <string name="btn_text_load_data">Load Sample Data</string>
    <string name="btn_text_retry">Retry</string>

    <string name="view_text_email">Email:</string>
    <string name="view_text_followers">Followers:</string>
    <string name="view_text_description">Description:</string>

    <string name="string_content_description">Non accessible view</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="title_activity_find_password">Find Password</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="title_activity_service_statement">Service statement</string>
</resources>
