<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright (C) 2015 Sitexa Open Source Project
  ~   <p>
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~   <p>
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~   <p>
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:clear="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sitexa.android.community.view.activity.RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_common_empty_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_common_empty_white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:text="@string/mobile_no"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/bfbfbf" />

        <com.sitexa.android.community.widget.ClearableEditText
            android:id="@+id/mobileNo"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/bg_common_empty_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/enter_mobile_no"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxEms="11"
            android:maxLength="11"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:ems="10"
            clear:right_drawable="@drawable/edit_text_clear"
            clear:offset_y="5dp"
            clear:touch_offset_x="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verificationCode_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_common_empty_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_common_empty_white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:text="@string/verify_code"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/bfbfbf" />

        <com.sitexa.android.community.widget.ClearableEditText
            android:id="@+id/verifyCode"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/bg_common_empty_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/enter_verify_code"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxEms="6"
            android:maxLength="6"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:ems="10"
            clear:right_drawable="@drawable/edit_text_clear"
            clear:offset_y="5dp"
            clear:touch_offset_x="10dp" />

        <Button
            android:id="@+id/getVerifyCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/getVerifyCode"
            style="@style/WhiteButton"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_common_empty_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_common_empty_white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:text="@string/username"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/bfbfbf" />


        <com.sitexa.android.community.widget.ClearableEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_common_empty_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_username"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLength="12"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:ems="10"
            clear:right_drawable="@drawable/edit_text_clear"
            clear:offset_y="5dp"
            clear:touch_offset_x="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_common_empty_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_common_empty_white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/bfbfbf" />


        <com.sitexa.android.community.widget.ClearableEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_common_empty_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:ems="10"
            clear:right_drawable="@drawable/edit_text_clear"
            clear:offset_y="5dp"
            clear:touch_offset_x="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/registerUserButton"
        style="@style/ThemeButton"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/register_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <CheckBox
            android:id="@+id/readServiceCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/read_and_agree"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/serviceStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/service_statement"
            android:textColor="@color/blue"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
