<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright (C) 2015 Sitexa Open Source Project
  ~   <p>
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~   <p>
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~   <p>
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_set_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/setPassword_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="8dp"
                android:text="@string/password"
                android:textSize="16sp" />

            <View
                android:layout_width="0.5dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/bfbfbf" />

            <com.sitexa.android.community.widget.ClearableEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/setting_login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxEms="11"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setPassword_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/setPassword_layout"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="8dp"
                android:text="@string/password_again"
                android:textSize="16sp" />

            <View
                android:layout_width="0.5dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/bfbfbf" />

            <com.sitexa.android.community.widget.ClearableEditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/setting_login_password_again_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxEms="11"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/set_password_ok_button"
        style="@style/ThemeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_margin="10dp"
        android:text="@string/set_password" />

</RelativeLayout>
