<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright (C) 2015 Sitexa Open Source Project
  ~   <p>
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~   <p>
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~   <p>
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:clear="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_login"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:src="@drawable/sitexa"
                app:border_color="#cfcfcf"
                app:border_width="0dp" />

            <LinearLayout
                android:id="@+id/login_input_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="44.0dip"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/icon_login_username" />

                    <com.sitexa.android.community.widget.ClearableEditText
                        android:id="@+id/username"
                        android:layout_width="0dp"
                        android:layout_height="44.0dip"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/username_enter_hint"
                        android:imeOptions="actionDone"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        clear:offset_y="5dp"
                        clear:right_drawable="@drawable/edit_text_clear"
                        clear:touch_offset_x="10dp" />

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_common_horizontal_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="44.0dip"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/icon_login_password" />

                    <com.sitexa.android.community.widget.ClearableEditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="44.0dip"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/password_enter_hint"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        clear:offset_y="5dp"
                        clear:right_drawable="@drawable/edit_text_clear"
                        clear:touch_offset_x="10dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/do_login"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:layout_below="@+id/login_input_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_btn_theme"
                android:text="@string/login_text"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:clickable="true"
        android:onClick="findPassword"
        android:text="@string/find_password"
        android:textColor="#cfcfcf"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:clickable="true"
        android:onClick="registerUser"
        android:text="@string/register_user"
        android:textColor="#cfcfcf"
        android:textSize="16sp" />

</RelativeLayout>